fix # 1147424 - multistep progres block NOT showing up in first step *when creating new node*

--- a/multistep.css
+++ b/multistep.css
@@ -16,6 +16,7 @@
   text-align: right;
   font-size: x-small;
   height: 1.5em;
+  float: left;
 }
 
 .multistep-progress-bar-100 {
